# qmdc

./: .env.publish.example  .gitignore  .markdownlint.json  .markdownlintignore  .qmdcignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  qmdc  setup.sh  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.kiro/steering/: code-review.md  code-review2.md  rules.md
docs/: .qmdc-mkdocs.ignore  .qmdcignore  mkdocs.yml  nav.yml  readme.md  readme.qmd.md
docs/.assets/: quickstart.cast  quickstart.demo.sh
docs/.qmdc-semantic/: embeddings.db  hints.json
docs/architecture/: algorithms.qmd.md  components.qmd.md  readme.qmd.md
docs/assets/: .gitkeep
docs/extension/: commands.qmd.md  readme.qmd.md
docs/format/: arrays.qmd.md  comments.qmd.md  dynamic-blocks.qmd.md  fields.qmd.md  headings.qmd.md  objects.qmd.md  readme.qmd.md  references.qmd.md  types.qmd.md  workspaces.qmd.md  (+2 more)
qmdc-mkdocs/: Makefile  README.md  pyproject.toml
qmdc-mkdocs/qmdc_mkdocs/: __init__.py  cli.py  config.py  converter.py  database.py  graph.py  hints.py  ignore.py  lexer.py  navigation.py  paths.py  plugin.py  references.py  regenerate.py  sql_blocks.py  syntax.py  validation.py
qmdc-mkdocs/qmdc_mkdocs/templates/css/: qmdc-extra.css  qmdc-mermaid.css
qmdc-mkdocs/qmdc_mkdocs/templates/js/: qmdc-extra.js  qmdc-mermaid-core.js  qmdc-mermaid.js
qmdc-mkdocs/qmdc_mkdocs/templates/partials/: footer.html  hint-popover.html  toc.html
qmdc-mkdocs/scripts/: bump_version.sh  publish.sh
qmdc-mkdocs/tests/: UI_TEST_PLAN.md  conftest.py  test_cli.py  test_config.py  test_converter.py  test_converter_property.py  test_database.py  test_graph.py  test_graph_property.py  test_hints.py  test_ignore.py  test_mermaid.py  test_navigation.py  test_navigation_property.py  test_plugin.py  test_references.py  test_references_property.py  test_skeleton.py  test_sql_blocks.py  test_sql_blocks_property.py  test_syntax.py  test_theme_overlay.py  test_validation.py
qmdc-py/: Makefile  README.md  pyproject.toml  qmdc.py  requirements.txt
qmdc-py/qmdc/: __init__.py  _launcher.py  cli.py  db.py  parser.py  tokenizer.py  workspace.py
qmdc-py/qmdc/parsers/: __init__.py  field.py  header.py
qmdc-py/scripts/: bump_version.sh  publish.sh
qmdc-py/tests/: __init__.py  debug_edges.py  test_cli.py  test_cli_conformance.py  test_db.py  test_parser.py  test_sql.py  test_workspace.py
qmdc-rs/: .gitignore  Cargo.toml  Makefile  README.md  qmdc
qmdc-rs/.cargo/: config.toml
qmdc-rs/.config/: nextest.toml
qmdc-rs/scripts/: bump_version.sh  lint-file-size.sh  publish.sh  roundtrip_check.sh
qmdc-rs/src/: lib.rs  main.rs  parser.rs  qmdc-guide.qmd.md  rebuild.rs  workspace.rs
qmdc-rs/src/core/: envelope.rs  error.rs  fields.rs  graph.rs  guide.rs  index_seam.rs  log.rs  mod.rs  nesting.rs  resolve.rs  resolved_index.rs  sql_guard.rs
qmdc-rs/src/core/ops/: describe.rs  describe_metamodel.rs  dump.rs  find_path.rs  locate.rs  mod.rs  outline.rs  query.rs  references.rs  rename_plan.rs  search.rs  traverse.rs  tree.rs  validate.rs
qmdc-rs/src/core/tree/: builders.rs  by_file.rs  by_namespace.rs  by_namespace_toplevel.rs  by_smart.rs  mod.rs
qmdc-rs/src/db/: mod.rs
qmdc-rs/src/lsp/: commands.rs  document.rs  mod.rs  server.rs  sql_rewrite.rs  workspace.rs
qmdc-rs/src/lsp/handlers/: completion.rs  definition.rs  diagnostics.rs  document_symbol.rs  hover.rs  mod.rs  references.rs  rename.rs  workspace_symbol.rs
qmdc-rs/src/mcp/: mod.rs  params.rs  resources.rs  server.rs  tools.rs
qmdc-rs/src/parser_modules/: block_tree.rs  header.rs  mod.rs  output.rs  references.rs  utils.rs  value_parser.rs
qmdc-rs/tests/: cli_conformance.rs  cli_unit.rs  core_index_seam.rs  line_numbers.rs  lsp.rs  lsp_did_save_sync.rs  lsp_label_change.rs  lsp_namespaced_localid.rs  lsp_smoke.rs  lsp_stale_diagnostics.rs  mcp.rs  mcp_force_root.rs  parser.rs  sql.rs  sql_rewrite.rs  tree_modes.rs  utf16_positions.rs  workspace_conformance.rs  workspace_unit.rs
qmdc-rs/tests/common/: mod.rs
qmdc-semantic/: Makefile  README.md  pyproject.toml
qmdc-semantic/qmdc_semantic/: __init__.py  chunking.py  cli.py  config.py  inferred.py  search.py  storage.py
qmdc-semantic/qmdc_semantic/providers/: __init__.py  ollama.py  openrouter.py
qmdc-semantic/scripts/: audit-edges.py  bump_version.sh  compute-hints.py  pre_index_check.py  publish.sh
qmdc-semantic/tests/: __init__.py  conftest.py  test_chunking.py  test_config.py  test_docs_quality.py  test_e2e.py  test_search.py  test_search_quality.py  test_storage.py
qmdc-semantic/tests/fixtures/mini-workspace/: dashboard.qmd.md  expected.edges.json  expected.objects.json  queries.qmd.md  readme.qmd.md  services.qmd.md
qmdc-semantic/tests/fixtures/mini-workspace/.qmdc-semantic/: config.yaml  embeddings.db
qmdc-semantic/tests/fixtures/mini-workspace/services/: api.qmd.md
qmdc-semantic/tests/fixtures/mini-workspace/tests/: 004-table-descriptions.expected.json  004-table-descriptions.sql  005-service-dependencies.expected.json  007-table-references.expected.json  015-level-hierarchy.expected.json  015-level-hierarchy.sql  016-namespace-directory-objects.expected.json  016-namespace-directory-objects.sql  018-tree-group-by-file.expected.json  018-tree-group-by-file.sql  020-edges-workspace.expected.json
qmdc-semantic/tests/fixtures/mini-workspace/tests/tree-modes/: file.expected.json  smart.expected.json
qmdc-semantic/tests/fixtures/search_quality/: queries.yaml  queries_docs.yaml
qmdc-semantic/tests/golden/: README.md
qmdc-ts/: Makefile  README.md  eslint.config.js  package-lock.json  package.json  qmdc  qmdc.ts  tsconfig.json
qmdc-vscode/: .gitignore  .vscodeignore  LICENSE  README.md  eslint.config.mjs  language-configuration.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
scripts/: compare_validate_errors.sh  release-build.sh  release-publish.sh  test-baseline.json  test-report.py
(+1346 files in other folders)
