[package]
name = "qmdc"
version = "1.0.4"
edition = "2021"
description = "QMDC parser, LSP server, and MCP server — convert QMD.md to a queryable object graph"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mikilabs/qmdc"
homepage = "https://github.com/mikilabs/qmdc"
readme = "README.md"
authors = ["mikilabs"]
keywords = ["qmdc", "markdown", "parser", "lsp", "knowledge-graph"]
categories = ["parser-implementations", "command-line-utilities"]
exclude = ["tests/", "python/", "dist/", "scripts/"]

[lib]
name = "qmdc"
crate-type = ["rlib"]

[[bin]]
name = "qmdc"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
indexmap = { version = "2.2", features = ["serde"] }
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-std", "io-util", "time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
globset = "0.4"
sqlparser = "0.40"
rmcp = { version = "0.9", features = ["server", "macros", "transport-io", "transport-async-rw", "schemars"] }
schemars = "1.0"

[dev-dependencies]
tempfile = "3.10"
tower = "0.4"
futures = "0.3"
rmcp = { version = "0.9", features = ["client"] }

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package.rusqlite]
opt-level = 1

[profile.dev.package.libsqlite3-sys]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
