[project]
name = "qmdc-semantic"
version = "1.0.0"
description = "Semantic search for QMDC workspaces - hybrid search, graph walk, inferred edges"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    {name = "mikilabs"}
]
keywords = ["qmdc", "semantic-search", "embeddings", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "qmdc>=1.0.0",
    "click>=8.1.7",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "sqlite-vec>=0.1.1",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/mikilabs/qmdc"
Repository = "https://github.com/mikilabs/qmdc"
Issues = "https://github.com/mikilabs/qmdc/issues"

[project.scripts]
qmdc-semantic = "qmdc_semantic.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (may need DB)",
    "e2e: End-to-end tests (need real embedding provider)",
    "slow: Slow tests (benchmarks, large workspaces)",
]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["qmdc_semantic*"]

[tool.uv.sources]
qmdc = { path = "../qmdc-py", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "qmdc",
]
